# FreeSWITCH-ASR

./: mod_asr.cpp
nlsSpeech-release/: CMakeLists.txt  readme.txt
nlsSpeech-release/demo/: asr-demo.cpp  config-asr.txt  config-realtime.txt  config-tts.txt  nlu-demo.cpp  realtime-demo.cpp  tts-demo.cpp
nlsSpeech-release/include/: NlsClient.h
nlsSpeech-release/lib/win/vs2013/x64/Debug/: realTimeSdk.lib
nlsSpeech-release/lib/win/vs2013/x64/Release/: realTimeSdk.lib
nlsSpeech-release/lib/win/vs2013/x86/Debug/: realTimeSdk.lib
nlsSpeech-release/lib/win/vs2013/x86/Release/: realTimeSdk.lib
nlsSpeech-release/lib/win/vs2015/x64/Debug/: realTimeSdk.lib
nlsSpeech-release/lib/win/vs2015/x64/Release/: realTimeSdk.lib
nlsSpeech-release/lib/win/vs2015/x86/Debug/: realTimeSdk.lib
nlsSpeech-release/lib/win/vs2015/x86/Release/: realTimeSdk.lib
